--- a/styles/main.css
+++ b/styles/main.css
@@ -44,3 +44,115 @@ a {
   font-weight: 600;
   font-style: italic;
   font-display: swap; }
+
+.conteiner {
+  max-width: 1366px;
+  width: 100%;
+  margin: 2px auto; }
+
+.position {
+  background-image: url(../image/mohamed.png);
+  background-repeat: no-repeat;
+  color: rgba(0, 0, 0, 0.253);
+  height: 324px; }
+  .position header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    padding: 10px 50px 0 100px; }
+    .position header ul {
+      display: flex; }
+      .position header ul li {
+        margin-right: 50px; }
+        .position header ul li a {
+          color: #fff;
+          font-size: 14px; }
+          .position header ul li a:hover {
+            color: red; }
+  .position .home {
+    padding-top: 100px;
+    padding-left: 100px;
+    color: white; }
+    .position .home .main {
+      font-size: 42px;
+      padding-bottom: 20px; }
+    .position .home .main-p {
+      display: flex;
+      padding: 0 10px 0 10px;
+      font-size: 14px; }
+      .position .home .main-p .main-p1 {
+        padding-right: 10px;
+        border-right: 2px solid #fff; }
+      .position .home .main-p .main-p2 {
+        padding-left: 10px; }
+
+.quality {
+  margin: 0 40px 20px 100px; }
+  .quality a {
+    font-size: 14px;
+    color: blue;
+    padding-bottom: 5px; }
+  .quality h2 {
+    font-size: 42px;
+    color: black; }
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 40px 100px 40px 100px;
+  position: relative; }
+  .flex .box-block {
+    width: 536px;
+    display: flex;
+    align-items: center; }
+    .flex .box-block .hotel {
+      border-right: 50px solid blue;
+      height: 180px;
+      padding-bottom: 10px; }
+    .flex .box-block img {
+      width: 168px;
+      height: 190px;
+      padding-bottom: 10px; }
+    .flex .box-block a {
+      font-size: 14px;
+      padding: 10px 10px 10px;
+      color: blue; }
+    .flex .box-block h2 {
+      font-size: 18px;
+      padding: 10px 10px 10px; }
+    .flex .box-block p {
+      font-size: 14px;
+      color: #B1B1B1;
+      height: 62px;
+      padding: 10px 10px 10px; }
+    .flex .box-block .arrow {
+      position: absolute;
+      width: 14px;
+      margin-left: 250px;
+      margin-bottom: 200px; }
+
+.label {
+  display: flex;
+  margin: 5px 50px 5px 50px;
+  position: relative; }
+  .label .titl-box {
+    color: blue;
+    margin: 5px 10px 5px 30px; }
+  .label .input {
+    padding: 20px 60px 20px 60px;
+    margin: 5px 10px 5px 30px; }
+  .label .send {
+    position: absolute;
+    margin-left: 950px; }
+    .label .send .send1 {
+      padding: 25px 100px 20px 100px;
+      margin: 20px 10px 0 10px;
+      background-color: blue;
+      color: #CECECE; }
+    .label .send .plane1 {
+      position: absolute;
+      margin-left: 200px;
+      padding-bottom: 100px; }
